--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <!-- OBJファイルはモデル形状、MTLファイルはテクスチャ情報 -->
         <!-- ここで指定したIDを呼び出し時に使う -->
         <a-assets>
-            <a-asset-item id="signpanel_mtl" src="static/models/signpanel/signpanel.mtl"></a-asset-item>
-            <a-asset-item id="signpanel_obj" src="static/models/signpanel/signpanel.obj"></a-asset-item>
+            <a-asset-item id="ARdemo_mtl" src="Assets/ARdemo.mtl"></a-asset-item>
+            <a-asset-item id="ARdemo_obj" src="Assets/ARdemo.obj"></a-asset-item>
         </a-assets>
 
         <a-assets>
@@ -30,13 +30,13 @@
         <!-- ARオブジェクトを描画するシーンの定義 -->
         <a-scene stats embedded arjs='debugUIEnabled: false; sourceType: webcam; detectionMode: mono; maxDetectionRate: 30; canvasWidth: 240; canvasHeight: 180'>
             <!-- ARマーカに対する描画オブジェクト -->
-            <a-marker preset="custom" type="pattern" url="static/marker/pattern.patt">
+            <a-marker preset="custom" type="pattern" url="Assets/qr_code.png">
                 <!-- オブジェクト1つめの配置 -->
-                <a-obj-model src="#signpanel_obj" mtl="#signpanel_mtl" position="0 0 0" rotation="-100 0 0" scale="0.05 0.05 0.05" visible="true"></a-obj-model>
+                <a-obj-model src="#ARdemo_obj" mtl="#ARdemo_mtl" position="0 0 0" rotation="-100 0 0" scale="0.05 0.05 0.05" visible="true"></a-obj-model>
 
                 <!-- a-entityタグでオブジェクトやアニメーションの定義をまとめる -->
                 <a-entity>
-                    <a-obj-model src="#grass_obj" mtl="#grass_mtl" position="-0.3 0 0" rotation="-90 0 0" scale="0.03 0.03 0.03" visible="true"></a-obj-model>
+                    <a-obj-model src="#ARdemo_obj" mtl="#grass_mtl" position="-0.3 0 0" rotation="-90 0 0" scale="0.03 0.03 0.03" visible="true"></a-obj-model>
                     <!-- アニメーションもHTMLタグで定義可能 -->
                     <a-animation attribute="rotation" dur="5000" fill="forwards" to="0 360 0" repeat="indefinite"></a-animation>
                 </a-entity>
@@ -46,15 +46,6 @@
                 <a-text value="Reality" position='-0.3 1.3 -0.1' rotation="0 0 0" scale="1.5 1.5 1.5" color="#111111"></a-text>
             </a-marker>
 
-            <!-- マルチマーカの場合はa-markerタグを複数書く -->
-            <a-marker preset="custom" type="pattern" url="static/marker/pattern2.patt">
-                <a-obj-model src="#signpanel_obj" mtl="#signpanel_mtl" position="0 0 0" rotation="-100 0 0" scale="0.05 0.05 0.05" visible="true"></a-obj-model>
-                <a-entity>
-                    <a-obj-model src="#grass_obj" mtl="#grass_mtl" position="-0.3 0 0" rotation="-90 0 0" scale="0.03 0.03 0.03" visible="true"></a-obj-model>
-                    <a-animation attribute="rotation" dur="5000" fill="forwards" to="0 360 0" repeat="indefinite"></a-animation>
-                </a-entity>
-                <a-text value="Multi Marker" position='-0.7 1.7 -0.1' rotation="0 0 0" scale="1.2 1.2 1.2" color="#111111"></a-text>
-            </a-marker>
 
             <!-- カメラオブジェクトの配置 -->
             <a-camera-static/>
