--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <!-- ARオブジェクトを描画するシーンの定義 -->
         <a-scene stats embedded arjs='debugUIEnabled: false; sourceType: webcam; detectionMode: mono; maxDetectionRate: 30; canvasWidth: 240; canvasHeight: 180'>
             <!-- ARマーカに対する描画オブジェクト -->
-            <a-marker preset="custom" type="pattern" url="Assets/qr_code.png">
+            <a-marker preset="custom" type="pattern" url="Assets/pattern-qr_code.patt">
                 <!-- オブジェクト1つめの配置 -->
                 <a-obj-model src="#ARdemo_obj" mtl="#ARdemo_mtl" position="0 0 0" rotation="-100 0 0" scale="0.05 0.05 0.05" visible="true"></a-obj-model>
 
                 <!-- a-entityタグでオブジェクトやアニメーションの定義をまとめる -->
                 <a-entity>
-                    <a-obj-model src="#ARdemo_obj" mtl="#grass_mtl" position="-0.3 0 0" rotation="-90 0 0" scale="0.03 0.03 0.03" visible="true"></a-obj-model>
+                    <a-obj-model src="#ARdemo_obj" mtl="#ARdemo_mtl" position="-0.3 0 0" rotation="-90 0 0" scale="0.03 0.03 0.03" visible="true"></a-obj-model>
                     <!-- アニメーションもHTMLタグで定義可能 -->
                     <a-animation attribute="rotation" dur="5000" fill="forwards" to="0 360 0" repeat="indefinite"></a-animation>
                 </a-entity>
