--- a/index.html
+++ b/index.html
@@ -1,46 +1,20 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-
-        <!-- A-Frame ライブラリの読み込み -->
-        <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-
-        <!-- AR.js ライブラリの読み込み -->
-        <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-
-        <title>WebAR Demo</title>
-    </head>
-
-    <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
-
-        <!-- 3Dオブジェクトの読み込み -->
-        <!-- OBJファイルはモデル形状、MTLファイルはテクスチャ情報 -->
-        <!-- ここで指定したIDを呼び出し時に使う -->
-        <a-assets>
-            <a-asset-item id="ARdemo_mtl" src="Assets/ARdemo.mtl"></a-asset-item>
-            <a-asset-item id="ARdemo_obj" src="Assets/ARdemo.obj"></a-asset-item>
-        </a-assets>
-
-        <!-- ARオブジェクトを描画するシーンの定義 -->
-        <a-scene stats embedded arjs='debugUIEnabled: false; sourceType: webcam; detectionMode: mono; maxDetectionRate: 30; canvasWidth: 240; canvasHeight: 180'>
-            <!-- ARマーカに対する描画オブジェクト -->
-            <a-marker preset="custom" type="pattern" url="Assets/pattern-qr_code.patt">
-                <!-- オブジェクト1つめの配置 -->
-                <a-obj-model src="#ARdemo_obj" mtl="#ARdemo_mtl" position="0 0 0" rotation="-100 0 0" scale="1.00 1.00 1.00" visible="true"></a-obj-model>
-
-                <!-- a-entityタグでオブジェクトやアニメーションの定義をまとめる -->
-                <a-entity>
-                    <a-obj-model src="#ARdemo_obj" mtl="#ARdemo_mtl" position="-1.0 0 0" rotation="-90 0 0" scale="1.03 1.03 1.03" visible="true"></a-obj-model>
-                    <!-- アニメーションもHTMLタグで定義可能 -->
-                    <a-animation attribute="rotation" dur="5000" fill="forwards" to="0 360 0" repeat="indefinite"></a-animation>
-                </a-entity>
-
-            </a-marker>
-
-
-            <!-- カメラオブジェクトの配置 -->
-            <a-camera-static/>
-        </a-scene>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio with 3D Model</title>
+    <style>
+        body { margin: 0; }
+        canvas { display: block; }
+        #container { position: relative; width: 100vw; height: 100vh; }
+    </style>
+</head>
+<body>
+    <div id="container"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script>
+        // Three.js setup code will go here
+    </script>
+</body>
 </html>
