--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio with 3D Model</title>
+    <title>kihiro tokuno</title>
     <style>
         body { margin: 0; }
         canvas { display: block; }
