--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
     <div id="container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script>
-        // Three.js setup code will go here
-    </script>
+
+    <script src="script.js"></script>
 </body>
 </html>
