--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
     <div id="container"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://threejs.org/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/threejs/three.min.js"></script>
+    <script src="js/threejs/GLTFLoader.js"></script>
+    <script src="js/threejs/OrbitControls.js"></script>
 </body>
 </html>
