--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <script type="importmap">
             {
                 "imports": {
-                    "three": "https://unpkg.com/three@<version>/build/three.module.js",
-                    "three/addons/": "https://unpkg.com/three@<version>/examples/jsm/"
+                    "three": "https://unpkg.com/three@0.54/build/three.module.js",
+                    "three/addons/": "https://unpkg.com/three@0.54/examples/jsm/"
                 }
             }
         </script>
