Updated Menu UI
Added shapes interaction.
>when menu is opened, shape buttons fall

--- a/works.html
+++ b/works.html
@@ -12,11 +12,8 @@
                 <div class="top">
                     <header class="top-header">
                         <nav class="header-navigation">
-                            <div class="header-navigation-2">
-                                <div class="text-wrapper" id="home-link" style="cursor: pointer">TOKUNO KIHIRO</div>
-                                <div class="text-wrapper">→WORKS</div>
-                            </div>
-                            <button class="menu-button">MENU</button>
+                            <div class="text-wrapper" id="home-link">TOKUNO KIHIRO</div>
+                            <div class="menu-button">MENU</div>
                         </nav>
                     </header>
 
@@ -48,27 +45,27 @@
                             </div>
                             <div class="div">
                                 <div class="div-3">
-                                    <div class="filler-rectangle">Hopefully, the update arrives...</div>
+                                    <div class="filler-rectangle">UPDATING...</div>
                                     <div class="text-wrapper">UPDATING...</div>
                                 </div>
-
-                                <div class="div-3">
-                                    <div class="filler-rectangle">Hopefully, the update arrives...</div>
-                                    <div class="text-wrapper">UPDATING...</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="menu-overlay">
-                            <div class="menu-content">
-                                <div class="menu-item">TOP</div>
-                                <div class="menu-item">WORKS</div>
-                                <div class="menu-item">BIO</div>
                             </div>
                         </div>
                     </main>
+
+                    <div class="menu-overlay">
+                        <div class="menu-content">
+                            <div class="menu-item">TOP</div>
+                            <div class="menu-item">WORKS</div>
+                            <div class="menu-item">BIO</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        <div id="p5-canvas"></div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js"></script>
+        <script src="js/p5sketch.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
