--- a/index.html
+++ b/index.html
@@ -12,30 +12,32 @@
                 <div class="top">
                     <header class="top-header">
                         <nav class="header-navigation">
-                            <div class="text-wrapper" id="home-link" style="cursor: pointer">TOKUNO KIHIRO</div>
-                            <button class="menu-button">MENU</button>
+                            <div class="text-wrapper" id="home-link">TOKUNO KIHIRO</div>
+                            <div class="menu-button">MENU</div>
                         </nav>
                     </header>
 
                     <main class="top-showcase" role="main">
-                        <!-- Showcase images for index.html -->
                         <img src="img/showcase_1.png" class="showcase-image active" alt="Showcase image 1" />
                         <img src="img/showcase_2.png" class="showcase-image" alt="Showcase image 2" />
                         <img src="img/showcase_3.png" class="showcase-image" alt="Showcase image 3" />
                         <img src="img/showcase_4.png" class="showcase-image" alt="Showcase image 4" />
-
-                        <!-- Menu overlay -->
-                        <div class="menu-overlay">
-                            <div class="menu-content">
-                                <div class="menu-item">TOP</div>
-                                <div class="menu-item">WORKS</div>
-                                <div class="menu-item">BIO</div>
-                            </div>
-                        </div>
                     </main>
+
+                    <div class="menu-overlay">
+                        <div class="menu-content">
+                            <div class="menu-item">TOP</div>
+                            <div class="menu-item">WORKS</div>
+                            <div class="menu-item">BIO</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        <div id="p5-canvas"></div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js"></script>
+        <script src="js/p5sketch.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
