added loading screen

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <div id="loading-screen">
+            <canvas id="loading-canvas"></canvas>
+            <div class="loading-text">TOKUNO KIHIRO</div>
+        </div>
         <div class="iphonemini">
             <div class="top-wrapper">
                 <div class="top">
@@ -35,6 +39,8 @@
             </div>
         </div>
         <div id="p5-canvas"></div>
+        <div class="slideshow-progress-bar"></div>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js"></script>
         <script src="js/p5sketch.js"></script>
