Updated Menu accelerometer interaction

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                             <div class="menu-item">WORKS</div>
                             <div class="menu-item">BIO</div>
                         </div>
+                        <div id="gyro-display"></div>
                     </div>
                 </div>
             </div>
