Updated loading animation, gyro-data

--- a/works.html
+++ b/works.html
@@ -48,6 +48,11 @@
                                     <div class="filler-rectangle">UPDATING...</div>
                                     <div class="text-wrapper">UPDATING...</div>
                                 </div>
+
+                                <div class="div-3">
+                                    <div class="filler-rectangle">UPDATING...</div>
+                                    <div class="text-wrapper">UPDATING...</div>
+                                </div>
                             </div>
                         </div>
                     </main>
