Added about page

--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
                         <img src="img/showcase_2.png" class="showcase-image" alt="Showcase image 2" />
                         <img src="img/showcase_3.png" class="showcase-image" alt="Showcase image 3" />
                         <img src="img/showcase_4.png" class="showcase-image" alt="Showcase image 4" />
+                        <!-- <div class="left-container">
+
+                        </div>
+                        <div class="resize-handle"></div> -->
                     </main>
 
                     <div class="menu-overlay">
                         <div class="menu-content">
                             <div class="menu-item">TOP</div>
                             <div class="menu-item">WORKS</div>
-                            <div class="menu-item">BIO</div>
+                            <div class="menu-item">ABOUT</div>
                         </div>
                     </div>
                 </div>
