--- a/works.html
+++ b/works.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>TOKUNO KIHIRO - Works</title>
+        <title>TOKUNO KIHIRO → Works</title>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
@@ -13,6 +13,7 @@
                     <header class="top-header">
                         <nav class="header-navigation">
                             <div class="text-wrapper" id="home-link">TOKUNO KIHIRO</div>
+                            <div class="text-wrapper">→WORKS</div>
                             <div class="menu-button">MENU</div>
                         </nav>
                     </header>
@@ -61,7 +62,7 @@
                         <div class="menu-content">
                             <div class="menu-item">TOP</div>
                             <div class="menu-item">WORKS</div>
-                            <div class="menu-item">BIO</div>
+                            <div class="menu-item">ABOUT</div>
                         </div>
                     </div>
                 </div>
