--- a/about.html
+++ b/about.html
@@ -5,8 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Tokuno Kihiro - About</title>
         <link rel="stylesheet" href="style.css" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/GLTFLoader.js"></script>
     </head>
     <body>
         <div class="about">
@@ -33,7 +31,9 @@
                                     探索的なコンピュータと人間のインタラクション のデザインとエンジニアリング。
                                 </div>
                             </div>
-                            <div id="3dAvatar"></div>
+                            <div class="frame-about-3">
+                                <div id="3dAvatar"></div>
+                            </div>
                         </div>
                     </main>
                     <div class="menu-overlay">
@@ -49,8 +49,21 @@
         <div id="p5-canvas"></div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js"></script>
+
         <script src="js/p5sketch.js"></script>
-        <script src="js/three.js"></script>
+
         <script src="js/script.js"></script>
+
+        <script type="importmap">
+            {
+                "imports": {
+                    "three": "https://unpkg.com/three@0.138.0/build/three.module.js",
+                    "three/examples/jsm/controls/OrbitControls": "https://unpkg.com/three@0.138.0/examples/jsm/controls/OrbitControls.js",
+                    "three/examples/jsm/loaders/GLTFLoader": "https://unpkg.com/three@0.138.0/examples/jsm/loaders/GLTFLoader.js",
+                    "three/examples/jsm/modifiers/SimplifyModifier": "https://unpkg.com/three@0.138.0/examples/jsm/modifiers/SimplifyModifier.js"
+                }
+            }
+        </script>
+        <script type="module" src="js/three.js"></script>
     </body>
 </html>
