Fix button responsiveness on mobile devices

--- a/exp_audioVisualiser/index.html
+++ b/exp_audioVisualiser/index.html
@@ -9,7 +9,7 @@
         <link rel="apple-touch-icon" href="/logo192.png" />
         <link rel="manifest" href="/manifest.json" />
         <title>React App</title>
-        <link href="static/css/main.9daf81fc.chunk.css" rel="stylesheet" />
+        <link href="static/css/main.f26ccecc.chunk.css" rel="stylesheet" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -136,6 +136,7 @@
             })([]);
         </script>
         <script src="static/js/2.3a757ae5.chunk.js"></script>
-        <script src="static/js/main.1a5adf62.chunk.js"></script>
+        <script src="static/js/3.d5f86460.chunk.js"></script>
+        <script src="static/js/main.fa70fc59.chunk.js"></script>
     </body>
 </html>
