modified parent path for source files

--- a/exp_audioVisualiser/index.html
+++ b/exp_audioVisualiser/index.html
@@ -9,7 +9,7 @@
         <link rel="apple-touch-icon" href="/logo192.png" />
         <link rel="manifest" href="/manifest.json" />
         <title>React App</title>
-        <link href="/static/css/main.abea71a5.chunk.css" rel="stylesheet" />
+        <link href="static/css/main.abea71a5.chunk.css" rel="stylesheet" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -123,7 +123,7 @@
                     (s.o = function (e, r) {
                         return Object.prototype.hasOwnProperty.call(e, r);
                     }),
-                    (s.p = '/'),
+                    (s.p = ''),
                     (s.oe = function (e) {
                         throw (console.error(e), e);
                     });
@@ -135,7 +135,7 @@
                 l();
             })([]);
         </script>
-        <script src="/static/js/2.3a757ae5.chunk.js"></script>
-        <script src="/static/js/main.fa70fc59.chunk.js"></script>
+        <script src="static/js/2.3a757ae5.chunk.js"></script>
+        <script src="static/js/main.fa70fc59.chunk.js"></script>
     </body>
 </html>
