--- a/exp_audioVisualiser/index.html
+++ b/exp_audioVisualiser/index.html
@@ -7,9 +7,9 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Web site created using create-react-app" />
         <link rel="apple-touch-icon" href="/logo192.png" />
-        <link rel="manifest" href="/manifest.json" />
+        <link rel="manifest" href="manifest.json" />
         <title>React App</title>
-        <link href="static/css/main.abea71a5.chunk.css" rel="stylesheet" />
+        <link href="static/css/main.a3daa9a1.chunk.css" rel="stylesheet" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -136,6 +136,6 @@
             })([]);
         </script>
         <script src="static/js/2.3a757ae5.chunk.js"></script>
-        <script src="static/js/main.fa70fc59.chunk.js"></script>
+        <script src="static/js/main.c19f0480.chunk.js"></script>
     </body>
 </html>
